[tool.poetry]
name = "media-organizer"
version = "0.1.0"
description = ""
authors = ["RomainSabathe <RSabathe@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pyexiftool = "^0.5.5"
ipdb = "^0.13.13"
pytest-xdist = "^3.3.1"
pytz = "^2023.3"
timezonefinder = "^6.2.0"
reverse-geocoder = "^1.5.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
